--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/main/main.js",
   "scripts": {
     "serve": "set WIDTH=400&&set HEIGHT=500&& electron .",
-    "serve-t": "set NODE_ENV=devTools&& electron ."
+    "serve-t": "set NODE_ENV=devTools&& electron .",
+    "pack": "electron-packager . WMuTong-friend --win --out ../WMuTong-friend-exe --atch=64 --app-version=0.01 --electron-version=1.4.13"
   },
   "repository": {
     "type": "git",
