--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "homepage": "https://github.com/YingHaoGao/WMuTong-friend#readme",
   "dependencies": {
     "three": "^0.119.1"
+  },
+  "devDependencies": {
+    "electron": "^11.2.0"
   }
 }
