添加主进程与渲染进程通信

--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
   "homepage": "https://github.com/YingHaoGao/WMuTong-friend#readme",
   "dependencies": {
     "electron-rebuild": "^2.3.5",
-    "node-api": "^0.0.1",
     "three": "^0.127.0",
     "robotjs": "git+https://github.com/octalmage/robotjs.git"
   },
   "devDependencies": {
-    "electron": "^11.2.0"
+    "electron": "^11.2.0",
+    "node-api": "^0.0.1"
   }
 }
