--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "homepage": "https://github.com/YingHaoGao/WMuTong-friend#readme",
   "dependencies": {
     "electron-rebuild": "^2.3.5",
-    "three": "^0.127.0",
-    "robotjs": "git+https://github.com/octalmage/robotjs.git"
+    "robotjs": "git+https://github.com/octalmage/robotjs.git",
+    "three": "^0.127.0"
   },
   "devDependencies": {
     "electron": "^11.2.0",
