--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/YingHaoGao/WMuTong-friend#readme",
   "dependencies": {
     "electron-rebuild": "^2.3.5",
+    "iohook": "^0.9.0",
     "robotjs": "git+https://github.com/octalmage/robotjs.git",
     "three": "^0.127.0"
   },
