--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "robotjs": "git+https://github.com/octalmage/robotjs.git",
-    "three": "^0.127.0"
+    "three": "^0.127.0",
+    "ws": "^7.4.5"
   },
   "devDependencies": {
     "electron": "^11.2.0",
