--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/YingHaoGao/WMuTong-friend#readme",
   "dependencies": {
     "electron-rebuild": "^2.3.5",
+    "iconv-lite": "^0.6.2",
     "iohook": "^0.9.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
