晚上浏览器

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "electron": "^11.2.0",
     "electron-packager": "^15.2.0",
+    "electron-tabs": "^0.15.0",
     "node-api": "^0.0.1"
   }
 }
